[tool.poetry]
name = "tess-cloud"
version = "0.2.0"
description = "Analyze NASA TESS data in the cloud."
license = "MIT"
authors = ["Geert Barentsen <hello@geert.io>"]
readme = "README.rst"
homepage = "https://github.com/SSDataLab/tess-cloud"
repository = "https://github.com/SSDataLab/tess-cloud"
keywords = ["NASA, TESS, Astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.dependencies]
python = "^3.7"
tess-locator = ">=0.4.0"
tess-ephem = ">=0.2.0"
lightkurve = ">=2.0.7"
#tess-locator = {path = "../tess-locator", develop = true}
#tess-ephem = {path = "../tess-ephem", develop = true}
#lightkurve = {path = "../lightkurve", develop = true}
numpy = ">=1.19"
astropy = ">=4.2"
aioboto3 = ">=8.2.0"
diskcache = ">=5.2.1"
tqdm = ">=4.58.0"
aiohttp = ">=3.7.4"
nest-asyncio = ">=1.5.1"
s3fs = ">=0.5.2"
pyarrow = ">=3.0.0"
backoff = ">=1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
isort = "^5.6.4"
mypy = "^0.790"
line-profiler = "^3.1.0"
jupyterlab = "^2.2.9"
pytest-xdist = "^2.1.0"
nest-asyncio = "^1.5"
memory-profiler = "^0.58.0"
mkdocs = "^1.1.2"
mkdocs-material = "^7.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
